// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly as a selected tag 1`] = `
<View
  color="navy"
  selected={true}
  style={
    Array [
      Object {
        "backgroundColor": "navy",
        "borderColor": "navy",
        "borderRadius": 12,
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 24,
        "paddingBottom": 0,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 0,
      },
    ]
  }
>
  <Text
    selected={true}
    style={
      Array [
        Object {
          "color": "#fff",
          "fontSize": 16,
        },
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`Tag renders correctly as an unselected tag 1`] = `
<View
  color="navy"
  selected={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderColor": "#c3c3c3",
        "borderRadius": 12,
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 24,
        "paddingBottom": 0,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 0,
      },
    ]
  }
>
  <Text
    selected={false}
    style={
      Array [
        Object {
          "color": "#c3c3c3",
          "fontSize": 16,
        },
      ]
    }
  >
    test
  </Text>
</View>
`;
